<resources>
    <string name="welcome">Welcome to SyncUp Wireless</string>
    <string name="app_name">SyncUp</string>
    <string name="error_access_denied">Access denied</string>
    <string name="error_access_violation">Access violation</string>
    <string name="error_inpage_error">Memory in page fault</string>
    <string name="error_account_disabled">This user account is disabled, change user name</string>
    <string name="error_account_locked_out">Your account is locked out</string>
    <string name="error_account_restriction">Your account is restricted</string>
    <string name="error_bad_network_name">Bad network name, check share permissions</string>
    <string name="error_network_busy">Network is busy</string>
    <string name="error_buffer_too_small">Buffer is too small</string>
    <string name="error_cannot_delete">Can not delete</string>
    <string name="error_cant_access_domain_info">Can not access domain info</string>
    <string name="error_delete_pending">Delete is pending</string>
    <string name="error_duplicate_name">Duplicate name</string>
    <string name="error_file_is_a_directory">File is a directory</string>
    <string name="error_instance_not_available">Instance is not available</string>
    <string name="error_invalid_computer_name">Invalid computer name</string>
    <string name="error_invalid_handle">Invalid handle</string>
    <string name="error_invalid_info_class">Invalid info class</string>
    <string name="error_invalid_logon_hours">Invalid logon hours</string>
    <string name="error_invalid_parameter">Invalid parameter</string>
    <string name="error_invalid_pipe_state">Invalid pipe state</string>
    <string name="error_invalid_sid">Invalid session id</string>
    <string name="error_invalid_workstation">Invalid workstation</string>
    <string name="error_io_reparse_tag_not_handled">Reparse tag not handled</string>
    <string name="error_logon_failure">Logon failure, check your user name and password</string>
    <string name="error_logon_type_not_granted">Logon type not granted, change user name</string>
    <string name="error_more_processing_required">More processing required</string>
    <string name="error_network_access_denied">Network access is denied</string>
    <string name="error_network_name_deleted">Network name was deleted</string>
    <string name="error_no_logon_servers">There are no logon servers available</string>
    <string name="error_no_such_alias">There is no such alias</string>
    <string name="error_internal_db_error">Internal db error</string>
    <string name="error_no_such_device">There is no such device</string>
    <string name="error_no_such_domain">There is no such domain</string>
    <string name="error_invalid_server_state">Invalid sam server state</string>
    <string name="error_no_such_file">Directory or file not found</string>
    <string name="error_no_such_user">There is no such user</string>
    <string name="error_no_such_group">There is no such group</string>
    <string name="error_no_trust_sam_account">There is not trust sam account</string>
    <string name="error_nologon_workstation_trust_account">There is no logon workstation trust account</string>
    <string name="error_none_mapped">There is no mapping</string>
    <string name="error_not_a_directory">Is not a directory</string>
    <string name="error_not_found">Not found</string>
    <string name="error_not_implemented">Not implemented</string>
    <string name="error_object_name_collision">File name collision</string>
    <string name="error_object_name_invalid">File name is invalid</string>
    <string name="error_object_name_not_found">File not found</string>
    <string name="error_object_path_invalid">File path is invalid</string>
    <string name="error_object_path_not_found">File path not found</string>
    <string name="error_object_path_syntax_bad">File path syntax error</string>
    <string name="error_password_expired">Password has expired</string>
    <string name="error_password_must_change">You must change your password</string>
    <string name="error_path_not_covered">Path is not covered</string>
    <string name="error_pipe_broken">Pipe is broken</string>
    <string name="error_pipe_busy">Pipe is busy</string>
    <string name="error_pipe_closing">Pipe is closing</string>
    <string name="error_pipe_disconnected">Pipe has disconnected</string>
    <string name="error_pipe_listening">Pipe is listening</string>
    <string name="error_pipe_not_available">Pipe is not available</string>
    <string name="error_port_disconnected">Port has disconnected</string>
    <string name="error_request_not_accepted">Request was not accepted</string>
    <string name="error_sharing_violation">Sharing violation</string>
    <string name="error_trusted_domain_failure">Trusted domain failure</string>
    <string name="error_netlogon_not_started">Netlogon service not started</string>
    <string name="error_unsuccessful">Connection error</string>
    <string name="error_user_exists">User already exists</string>
    <string name="error_wrong_password">Password is wrong</string>
    <string name="error_file_lock_conflict">Conflicted with an existing file lock</string>
    <string name="error_lock_not_granted">A lock request specified an invalid locking mode, or conflicted with an existing file lock.</string>
    <string name="error_invalid_device_request">Invalid device request</string>
    <string name="error_illegal_function">Illegal function call</string>
    <string name="error_dfs_exit_path_found">Path not found</string>
    <string name="error_redirector_not_started">Redirector not started</string>
    <string name="error_too_many_opened_files">Too many open files</string>
    <string name="error_invalid_lock_sequence">Invalid lock sequence</string>
    <string name="error_invalid_view_size">Invalid view size</string>
    <string name="error_already_committed">Already committed</string>
    <string name="error_port_connection_refused">Port connection refused</string>
    <string name="error_thread_is_terminating">Thread is terminating</string>
    <string name="error_privilege_not_held">Privilege not held</string>
    <string name="error_file_renamed">File renamed</string>
    <string name="error_process_is_terminating">Process is terminating</string>
    <string name="error_directory_not_empty">Directory is not empty</string>
    <string name="error_file_corrupt">File corrupted</string>
    <string name="error_file_deleted">File deleted</string>
    <string name="error_smb_bad_fid">Invalid handle</string>
    <string name="error_object_type_mismatch">File type mismatch</string>
    <string name="error_invalid_port_handle">Invalid port handle</string>
    <string name="error_file_closed">File closed</string>
    <string name="error_handle_not_closable">Handle can not be closed</string>
    <string name="error_connection_refused">Connection refused</string>
    <string name="error_section_too_big">Section is too big</string>
    <string name="error_too_many_paging_files">Too many paging files</string>
    <string name="error_file_invalid">File is no longer valid</string>
    <string name="error_insuff_server_resources">Insufficient server resources</string>
    <string name="error_os2_invalid_access">OS2 invalid access</string>
    <string name="error_data_error">Data error</string>
    <string name="error_device_not_connected">Device is not connected</string>
    <string name="error_device_not_ready">Device is not ready</string>
    <string name="error_not_same_device">Not the same device</string>
    <string name="error_no_more_files">No more files</string>
    <string name="error_end_of_file">End of file</string>
    <string name="error_not_supported">Server request is not supported</string>
    <string name="error_os2_invalid_level">OS2 invalid level</string>
    <string name="error_os2_negative_seek">OS2 negative seek</string>
    <string name="error_range_not_locked">Range is not locked</string>
    <string name="error_os2_no_more_sids">OS2 no more session id</string>
    <string name="error_os2_cancel_violation">OS2 cancel violation</string>
    <string name="error_os2_atomic_locks_not_supported">OS2 atomic locks not supported</string>
    <string name="error_invalid_read_mode">Invalid read mode</string>
    <string name="error_os2_cannot_copy">OS2 can not copy</string>
    <string name="error_pipe_empty">Pipe is empty</string>
    <string name="error_buffer_overflow">Buffer overflow</string>
    <string name="error_ea_too_large">Extended attributes too large</string>
    <string name="error_os2_eas_didnt_fit">OS2 Extended attributes did not fit</string>
    <string name="error_eas_not_supported">Extended attributes not supported</string>
    <string name="error_os2_ea_access_denied">OS2 extended attributes access denied</string>
    <string name="error_notify_enum_dir">Enumeration error</string>
    <string name="error_invalid_smb">Unspecified server error</string>
    <string name="error_smb_bad_tid">Invalid TID</string>
    <string name="error_bad_device_type">Invalid device type</string>
    <string name="error_smb_bad_command">Invalid SMB command</string>
    <string name="error_print_queue_full">Print queue is full</string>
    <string name="error_no_spool_space">Out of spool space</string>
    <string name="error_print_cancelled">Print canceled</string>
    <string name="error_unexpected_network_error">Unexpected network error</string>
    <string name="error_io_timeout">IO timeout</string>
    <string name="error_too_many_sessions">Too many sessions</string>
    <string name="error_smb_bad_uid">Invalid user id</string>
    <string name="error_smb_use_mpx">Use MPX mode</string>
    <string name="error_smb_use_standard">Use standard mode</string>
    <string name="error_smb_continue_mpx">Continue in MPX mode</string>
    <string name="error_account_expired">User account expired</string>
    <string name="error_smb_no_support">Function not supported by the server</string>
    <string name="error_media_write_protected">Media is write protected</string>
    <string name="error_no_media_in_device">No media in device</string>
    <string name="delete">Delete</string>
    <string name="new_folder">New folder</string>
    <string name="refresh">Refresh</string>
    <string name="goto_dir">Go to</string>
    <string name="assistant_key">hint</string>
    <string name="assistant_title">Show help assistant</string>
    <string name="assistant_summary">Turns on or off help assistant. Requires app restart</string>
    <string name="show_device_root_key">show_device_root</string>
    <string name="show_device_root_title">Show all device folders</string>
    <string name="show_device_root_summary"></string>
    <string name="vibrate_key">vibrate</string>
    <string name="vibrate_title">Vibrate at sync finish</string>
    <string name="vibrate_summary">Vibrate at sync finish</string>
    <string name="force_wifi_key">force_wifi</string>
    <string name="force_wifi_title">Require WiFi connection</string>
    <string name="force_wifi_summary"></string>
    <string name="show_error_notification_key">show_error_notification</string>
    <string name="show_error_notification_title">Error notifications</string>
    <string name="show_error_notification_summary">Turns on or off error notification on failed synchronizations</string>
    <string name="select_all">Select all</string>
    <string name="multi_edit">Edit</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="user_interface">User interface</string>
    <string name="system">System</string>
    <string name="free_space_key">free_space_key</string>
    <string name="free_space_title">Minimum free space</string>
    <string name="free_space_summary">Minimum device or computer storage free space in megabytes. After reaching this limit sync will stop.</string>
</resources>