<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/newFolderMenu" android:title="@string/new_folder" />
    <item android:id="@id/editMenu" android:title="@string/multi_edit" android:checkable="true" android:showAsAction="always|withText" />
    <item android:icon="@drawable/cut" android:id="@id/cutMenu" android:title="@string/cut" android:showAsAction="always|withText" />
    <item android:icon="@drawable/copy" android:id="@id/copyMenu" android:title="@string/copy" android:showAsAction="always|withText" />
    <item android:icon="@drawable/download" android:id="@id/pasteMenu" android:title="@string/paste" android:showAsAction="always|withText" />
    <item android:icon="@drawable/delete" android:id="@id/deleteMenu" android:title="@string/delete" android:showAsAction="always|withText" />
    <item android:id="@id/selectAllMenu" android:title="@string/select_all" />
    <item android:id="@id/refreshMenu" android:title="@string/refresh" />
    <item android:id="@id/gotoMenu" android:title="@string/goto_dir" />
</menu>